--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
     text-align: center;
 }
 
-.containerCard {
+.main {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -30,24 +30,56 @@ body {
 }
 
 .card {
-    background-color: #A7E9AF;
     margin: 0px 17px 34px;
-    width: 117px;
-    height: 146px;
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 117px;
+    height: 146px;
+    position: relative;
 }
 
-.containerCard img {
+.cards {
+    width: 100%;
+    height: 100%;
+    background-color: #a7e9af;
+    border-radius: 10px;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    backface-visibility: hidden;
+    transition: all 0.5s;
+    transform-style: preserve-3d;
+}
+
+.cards img {
     display: block;
     width: 100px;
     height: 100px;
 }
 
-.hidden {
-    display: none;
+
+.card-back {
+    transform: rotateY(180deg);
 }
+
+.turned {
+    transform: rotateY(0deg);
+}
+
+.turned .card-front {
+    transform: rotateY(-180deg);
+}
+
+.turned .card-back {
+    transform: rotateY(0deg);
+}
+
+/* .hidden {
+    display: none;
+} */
 
 @media (max-width: 614px) {
     .title {
